# TCO-ElectronicPartsClassification

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  c++.sh
py/: avnet_estimator.py  avnet_estimator_01.py  avnet_estimator_01_real.py  xgb_sklearn.py
src/: Amalgamate.sh  ElectronicParts.hpp  amalgamate.cpp  array2d.hpp  main.cpp  num.hpp  param_store.hpp
